Fixed Module.class, now works properly; sorting `help and `module results alphabetically